--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,6 +1,3 @@
-<h2>car!</h2>
-
-
 <div class="container section scrollspy" id="themes">
     <div class="section">
         <div id="overflowTest">
@@ -55,8 +52,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <a class="waves-effect waves-light btn"
-                                        href="https://www.{{make}}.com/?{{model}}">For Sales</a>
+                                    <a class="waves-effect waves-light btn" href="https://www.{{make}}.com">For
+                                        Sales</a>
                                 </td>
 
                             </tr>
@@ -91,6 +88,19 @@
 
 
 
+            <div class="container">
+                <form action="https://formspree.io/zaid.fadel89@yahoo.com" method="POST">
+                    <label for="email">Email</label>
+                    <input type="text" class="email" name="email">
+                    <label for="subject">Subject</label>
+                    <input type="text" class="subject" name="subject">
+
+                    <label for="message">Message
+                        <textarea class="message" name="message" style="height:200px"></textarea></label>
+                    <div class="status"></div>
+                    <button type="subnits" class="subnits waves-effect waves-light btn">send </button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
