--- a/views/dealer.handlebars
+++ b/views/dealer.handlebars
@@ -6,7 +6,7 @@
           <div class="input-field col s4">
             <input name="carId" id="tbNumbers" type="text" class="validate" required
               onkeypress="javascript:return isNumber(event)">
-            <label for="carId">id</label>
+            <label for="carId">Title Number</label>
           </div>
           <div class="input-field col s4">
             <input name="make" id="make" type="text" class="validate" required>
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="input-field col s4">
             <input name="fuelType1" id="fuelType1" type="text" class="validate" required>
-            <label for="fuelType1">fuelType1</label>
+            <label for="fuelType1">fuelType</label>
           </div>
 
           <div class="input-field col s4">
@@ -58,7 +58,7 @@
           <div class="input-field col s6">
             <input name="fuelCost08" id="tbNumbers" type="text" class="validate" required
               onkeypress="javascript:return isNumber(event)">
-            <label for="fuelCost08">fuelCost08</label>
+            <label for="fuelCost08">Price</label>
           </div>
         </div>
         <button class="waves-effect waves-light btn" type="submit" onclick="myFunction()">Add car</button>
@@ -73,7 +73,7 @@
 <div class="container section scrollspy" id="themes">
   <div class="section">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper ">
         <form>
           <div class="input-field">
             <input id="search" type="search">
