--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,33 +19,47 @@
 <a style="color: white;
   text-shadow: 2px 2px 4px #000000" href="/register">register</a> --}}
 
+
 <div class="container">
-  <h1 class="brand"><span>Acme</span> Web Design</h1>
+  <h1 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" class="brand">&nbsp &nbsp &nbsp &nbsp &nbsp
+    Login Page</h1>
   <div class="wrapper animated bounceInLeft">
     <div class="company-info">
-      <h3>Acme Web Design</h3>
+      <h3 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"> Premiere</h3>
       <ul>
-        <li><i class="fa fa-road"></i> 44 Something st</li>
-        <li><i class="fa fa-phone"></i> (555) 555-5555</li>
-        <li><i class="fa fa-envelope"></i> test@acme.test</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-road"></i> 44 central st</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-phone"></i> (555) 555-5555</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-envelope"></i>
+          zaid.fadel89@yahoo.com</li>
       </ul>
     </div>
     <div class="contact">
-      <h3>Email Us</h3>
+      <h3 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Login</h3>
 
       <form method="POST" action="/login">
 
         <p>
-          <label>Email Address</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Email Address</label>
           <input type="email" id="email" name="email" required>
         </p>
         <p>
-          <label> password</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"> password</label>
           <input type="password" id="password" name="password" required>
         </p>
 
         <p class="full">
-          <button type="submit">Submit</button>
+          <button style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" type="submit">Submit</button>
+          <a href="register" style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" role="button">Sign Up</a>
         </p>
       </form>
     </div>
