--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,96 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--Import Google Icon Font-->
+
+<!--Let browser know website is optimized for mobile-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Compiled and minified JavaScript -->
 ​
+<script type="text/javascript" src="js/materialize.min.js"></script>
+​
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{{!-- <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type"> --}}
+<title>Document</title>
+​
+<!-- Compiled and minified CSS -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+​
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<!--Let browser know website is optimized for mobile-->
 
-<head>
+<!-- Compiled and minified JavaScript -->
+​
+<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
+<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
+<link async="" href="http://fonts.googleapis.com/css?family=Berkshire%20Swash" rel="stylesheet" type="text/css">
+<link async="" href="http://fonts.googleapis.com/css?family=Bad%20Script" rel="stylesheet" type="text/css">
+<link async="" href="http://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="images/favicon (10).ico" type="image/x-icon">
+<link rel="icon" href="images/favicon (10).ico" type="image/x-icon">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+<link rel="stylesheet" href="https://use.edgefonts.net/c/a709e5/1w;arizonia,2,WXG:W:n4/l" media="all">
+<link rel="stylesheet" href="/css/style.css" type="text/css" />
+<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
+<script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+​
+<!-- Compiled and minified JavaScript -->
 
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    ​
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Compiled and minified JavaScript -->
-    ​
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    ​
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
-    <title>Document</title>
-    ​
-    <!-- Compiled and minified CSS -->
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
-    <link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
-    <link async="" href="http://fonts.googleapis.com/css?family=Berkshire%20Swash" rel="stylesheet" type="text/css">
-    <link async="" href="http://fonts.googleapis.com/css?family=Bad%20Script" rel="stylesheet" type="text/css">
-    <link async="" href="http://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="images/favicon (10).ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon (10).ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
-    <link rel="stylesheet" href="https://use.edgefonts.net/c/a709e5/1w;arizonia,2,WXG:W:n4/l" media="all">
-    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script type="text/javascript" script-name="arizonia" src="http://use.edgefonts.net/arizonia.js"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    ​
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    ​
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css" type="text/css" />
-    <script src="js/premiere.js"></script>
-
+<script src="js/premiere.js"></script>
 </head>
 ​
 
 <body>
-    <div id="navbar" class="navbar-fixed scrollspy ">
+    <div class="navbar-fixed ">
+        <nav>
+            <div class="nav-wrapper #d50000 red accent-4">
+                <a style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" href="index" class="brand-logo">&nbsp &nbsp &nbsp
+                    &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp
 
-        <nav class="#d50000 red accent-4">
+                    &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Premiere</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="login" style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" role="button">Signout &nbsp &nbsp &nbsp &nbsp </a>
+                    </li>
 
-            <div class="nav-wrapper container">
-                <div class="container">
-                    <hi style=" color: white;
-  text-shadow: 4px 4px 6px #000000;">&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp  &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp Premiere</hi><a href="#navbar" class="brand-logo mLogo" style="margin-top: 15px;  color: white;
-  text-shadow: 5px 5px 6px black, 0 0 25px blue, 0 0 5px darkblue"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-                        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
-                </div>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li>
+                        < <a href="login" style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" role="button">Signout</a>
+                    </li>
 
-
-    ​
-    <div class="nav-wrapper container">
-        <hi>Premiere</hi>
-    </div>​
-
-    ​
-
-    </nav>
-    ​
+                </ul>
+            </div>
+        </nav>
+    </div>
     {{{body}}}
 
-​
-<footer class="page-footer" style="background-color: #d50000 red accent-4">
+    ​
 
-            <div class="footer-copyright #d50000 red accent-4">
-                <div class="container #d50000 red accent-4">
-                    <p>Copyright © Materialize themes</p>
-                </div>
+
+    ​
+    <footer class="page-footer" style="background-color: #d50000 red accent-4">
+
+        <div style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" class="footer-copyright #d50000 red accent-4">
+            <div class="container #d50000 red accent-4">
+                <p>Created By Ahmed | Juff | Zaid</p>
             </div>
         </div>
+
     </footer>
 </body>
 ​
