--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -23,43 +23,62 @@
   text-shadow: 2px 2px 4px #f35c5c" href="/login">Login</a> --}}
 
 
+
 <div class="container">
-  <h1 class="brand"><span>Acme</span> Web Design</h1>
+  <h1 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" class="brand"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+    Premiere</h1>
   <div class="wrapper animated bounceInLeft">
     <div class="company-info">
-      <h3>Acme Web Design</h3>
+      <h3 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Premiere</h3>
       <ul>
-        <li><i class="fa fa-road"></i> 44 Something st</li>
-        <li><i class="fa fa-phone"></i> (555) 555-5555</li>
-        <li><i class="fa fa-envelope"></i> test@acme.test</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-road"></i> 44 central st</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-phone"></i> (555) 555-5555</li>
+        <li style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"><i class="fa fa-envelope"></i>
+          zaid.fadel89@yahoo.com
+        </li>
       </ul>
     </div>
     <div class="contact">
-      <h3>Email Us</h3>
+      <h3 style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Email Us</h3>
 
       <form method="POST" action="/register">
         <p>
-          <label>Name</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Name</label>
           <input type="text" id="name" name="name" required>
         </p>
         <p>
-          <label>Company</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Company</label>
           <input type="text" name="company">
         </p>
         <p>
-          <label>Email Address</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Email Address</label>
           <input type="email" id="email" name="email" required>
         </p>
         <p>
-          <label> password</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue"> password</label>
           <input type="password" id="password" name="password" required>
         </p>
         <p class="full">
-          <label>Message</label>
+          <label style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue">Message</label>
           <textarea name="message" rows="5"></textarea>
         </p>
         <p class="full">
-          <button type="submit">Submit</button>
+          <button style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" type="submit">Submit</button>
+          <a href="login" style="color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue" role="button">Login</a>
+
         </p>
       </form>
     </div>
