--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,7 +55,7 @@
 ​
 
 <body>
-    <div class="navbar-fixed ">
+    <div class=" ">
         <nav>
             <div class="nav-wrapper #d50000 red accent-4">
                 <a style="color: white;
