--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -91,7 +91,8 @@
             <div class="container">
                 <form action="https://formspree.io/zaid.fadel89@yahoo.com" method="POST">
                     <label for="email">Email</label>
-                    <input type="text" class="email" name="email">
+                    <input type="text" class="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+
                     <label for="subject">Subject</label>
                     <input type="text" class="subject" name="subject">
 
